---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Low-level keystore operations (generate, import, export keys)

Usage: soma keytool [OPTIONS] <COMMAND>

Commands:
  update-alias                   Update an old alias to a new one. If a new alias is not provided, a random one will be generated
  decode-or-verify-tx            Given a Base64 encoded transaction bytes, decode its components. If a signature is provided, verify the signature against the transaction and output the result
  decode-multi-sig               Given a Base64 encoded MultiSig signature, decode its components. If tx_bytes is passed in, verify the multisig
  generate                       Generate a new keypair with key scheme flag {ed25519 | secp256k1 | secp256r1} with optional derivation path, default to m/44'/784'/0'/0'/0' for ed25519 or m/54'/784'/0'/0/0 for secp256k1 or m/74'/784'/0'/0/0 for secp256r1. Word length can be { word12 | word15 | word18 | word21 | word24} default to word12 if not specified
  import                         Add a new key to Soma CLI Keystore using either the input mnemonic phrase or a Bech32 encoded 33-byte `flag || privkey` starting with "somaprivkey", the key scheme flag {ed25519 | secp256k1 | secp256r1} and an optional derivation path, default to m/44'/784'/0'/0'/0' for ed25519 or m/54'/784'/0'/0/0 for secp256k1 or m/74'/784'/0'/0/0 for secp256r1. Supports mnemonic phrase of word length 12, 15, 18, 21, 24. Set an alias for the key with the --alias flag. If no alias is provided, the tool will automatically generate one
  export                         Output the private key of the given key identity in Soma CLI Keystore as Bech32 encoded string starting with `somaprivkey`
  list                           List all keys by its Soma address, Base64 encoded public key, key scheme name in soma.keystore
  load-keypair                   This reads the content at the provided file path. The accepted format can be [enum SomaKeyPair] (Base64 encoded of 33-byte `flag || privkey`) or `type AuthorityKeyPair` (Base64 encoded `privkey`). This prints out the account keypair as Base64 encoded `flag || privkey`, the network keypair, worker keypair, protocol keypair as Base64 encoded `privkey`
  multi-sig-address              To MultiSig Soma Address. Pass in a list of all public keys `flag || pk` in Base64. See `keytool list` for example public keys
  multi-sig-combine-partial-sig  Provides a list of participating signatures (`flag || sig || pk` encoded in Base64), threshold, a list of all public keys and a list of their weights that define the MultiSig address. Returns a valid MultiSig signature and its sender address. The result can be used as signature field for `soma tx execute-signed`. The sum of weights of all signatures must be >= the threshold
  show                           Read the content at the provided file path. The accepted format can be [enum SomaKeyPair] (Base64 encoded of 33-byte `flag || privkey`) or `type AuthorityKeyPair` (Base64 encoded `privkey`). It prints its Base64 encoded public key and the key scheme flag
  sign                           Create signature using the private key for the given address (or its alias) in soma keystore. Any signature commits to a [struct IntentMessage] consisting of the Base64 encoded of the BCS serialized transaction bytes itself and its intent. If intent is absent, default will be used
  unpack                         This takes [enum SomaKeyPair] of Base64 encoded of 33-byte `flag || privkey`). It outputs the keypair into a file at the current directory where the address is the filename, and prints out its Soma address, Base64 encoded public key, the key scheme, and the key scheme flag
  help                           Print this message or the help of the given subcommand(s)

Options:
      --keystore-path <KEYSTORE_PATH>  
      --json                           Output as JSON
  -h, --help                           Print help
